	Fixed bug where mysterious span elements where produced in Safari when injecting HTML contents.
	Fixed bug where the media plugin didn't work correctly on the latest Opera 9.24.
	Fixed bug where indentation of HTML output wasn't applied to all block elements.
	Fixed bug where Safari was production DOM exception if you pressed enter in an empty editor.
	Fixed issue where FF produced an empty paragraph when the editor was completely empty.
	Fixed issue with size of image dialog in the advanced theme.
	Fixed issues with the bbcode plugin it now also handles spans and the [font] rule.
	Fixed so the style compression feature is a bit smarter to resolve issues with Opera.
	Reintroduced the remove_linebreaks option, this is enabled by default.
Version 3.0b2 (2007-11-29)
	Added type and compact attributes to the default valid_elements list for the ul and ol elements.
	Added missing accessibility support to native list boxes in both the toolbar and dialogs.
	Added missing access key for the element path for accessibility reasons.
	Fixed support for loading themes from external URLs.
	Fixed bug where setOuterHTML didn't work correctly when multiple elements where passed to it.
	Fixed bug with visualchars plugin was moving elements around in the DOM.
	Fixed bug with DIV elements that got converted into editors on IE.
	Fixed bug with paste plugin using the old event API.
	Fixed bug where the spellchecker was removing the word when it was ignored.
	Fixed bug where fullscreen wasn't working properly.
	Fixed bug where the base href element and attribute was ignored.
	Fixed bug where redo function didn't work in IE.
	Fixed bug where content_css didn't work as previous 2.x branch.
	Fixed bug where preview dialog was throwing errors if the content_css wasn't defined.
	Fixed bug where the theme_advanced_path option didn't work like the 2.x branch.
	Fixed bug where the theme_advanced_statusbar_location was called theme_advanced_status_location.