@@ -19,6 +19,7 @@ Version 3.0b3 (2007-12-xx)
 	Fixed bug where the media plugin didn't work correctly on the latest Opera 9.24.
 	Fixed bug where indentation of HTML output wasn't applied to all block elements.
 	Fixed bug where Safari was production DOM exception if you pressed enter in an empty editor.
+	Fixed bug where media plugin didn't parse script tags correctly patch contributed by Mathieu Campagna.
 	Fixed issue where FF produced an empty paragraph when the editor was completely empty.
 	Fixed issue with size of image dialog in the advanced theme.
 	Fixed issues with the bbcode plugin it now also handles spans and the [font] rule.
